Objectives menus are completed in the frontend

--- a/templates/questions_obj1.html
+++ b/templates/questions_obj1.html
@@ -22,7 +22,7 @@
         <div class="content text-center"> 
             <img src="/static/bot.jpg" alt="DataGovernor" class="img-fluid">
             <h3>DataGovernor</h3>
-            <p>El objetivo 1 es .... </p>
+            <p>Consolidar altos niveles de gobernanza participativa y descentralizada entre los actores del SCTeI en el nivel subregional del departamento de Caldas </p>
         </div>        
         <p><h5>¿Qué te gustaría explorar?'</h5></p>
         <ul class="list-group">
