--- a/templates/questions_obj2.html
+++ b/templates/questions_obj2.html
@@ -22,7 +22,7 @@
         <div class="content text-center"> 
             <img src="/static/bot.jpg" alt="DataGovernor" class="img-fluid">
             <h3>DataGovernor</h3>
-            <p>El objetivo 2 es .... </p>
+            <p>Cátedra en Ciencia, Tecnología e Innovación + Creación para el desarrollo social y productivo de Caldas</p>
         </div>        
         <p><h5>¿Qué te gustaría explorar?'</h5></p>
         <ul class="list-group">
