--- a/templates/questions_obj3.html
+++ b/templates/questions_obj3.html
@@ -22,7 +22,7 @@
         <div class="content text-center"> 
             <img src="/static/bot.jpg" alt="DataGovernor" class="img-fluid">
             <h3>DataGovernor</h3>
-            <p>El objetivo 2 es .... </p>
+            <p>Implementar un modelo de gobernanza de datos para el Sistema de CTeI del departamento de Caldas que garantice su calidad, interoperabilidad, transaccionalidad frente a las necesidades de las subregiones en Caldas </p>
         </div>        
         <p><h5>¿Qué te gustaría explorar?'</h5></p>
         <ul class="list-group">
