--- a/templates/questions_obj4.html
+++ b/templates/questions_obj4.html
@@ -22,7 +22,7 @@
         <div class="content text-center"> 
             <img src="/static/bot.jpg" alt="DataGovernor" class="img-fluid">
             <h3>DataGovernor</h3>
-            <p>El objetivo 2 es .... </p>
+            <p>Crear un sistema de seguimiento, monitoreo y evaluación del proyecto con enfoque de resultados e impacto y articulación con actores internacionales expertos, que permita la comunicación y apropiación social de los resultados en las subregiones del departamento </p>
         </div>        
         <p><h5>¿Qué te gustaría explorar?'</h5></p>
         <ul class="list-group">
