--- a/templates/questions_obj1.html
+++ b/templates/questions_obj1.html
@@ -24,7 +24,7 @@
             <h3>DataGovernor</h3>
             <p>Consolidar altos niveles de gobernanza participativa y descentralizada entre los actores del SCTeI en el nivel subregional del departamento de Caldas </p>
         </div>        
-        <p><h5>¿Qué te gustaría explorar?'</h5></p>
+        <p><h5>¿Qué te gustaría explorar?</h5></p>
         <ul class="list-group">
             {% for item in menu %}
             <a href="/response_one/{{loop.index}}/{{ source }}/{{ item }}" class="btn btn-outline-custom">{{ item }}</a>
