--- a/templates/questions_obj3.html
+++ b/templates/questions_obj3.html
@@ -24,7 +24,7 @@
             <h3>DataGovernor</h3>
             <p>Implementar un modelo de gobernanza de datos para el Sistema de CTeI del departamento de Caldas que garantice su calidad, interoperabilidad, transaccionalidad frente a las necesidades de las subregiones en Caldas </p>
         </div>        
-        <p><h5>¿Qué te gustaría explorar?'</h5></p>
+        <p><h5>¿Qué te gustaría explorar?</h5></p>
         <ul class="list-group">
             {% for item in menu %}
             <a href="/response_three/{{loop.index}}/{{ source }}/{{ item }}" class="btn btn-outline-custom">{{ item }}</a>
