--- a/templates/questions_obj4.html
+++ b/templates/questions_obj4.html
@@ -24,7 +24,7 @@
             <h3>DataGovernor</h3>
             <p>Crear un sistema de seguimiento, monitoreo y evaluación del proyecto con enfoque de resultados e impacto y articulación con actores internacionales expertos, que permita la comunicación y apropiación social de los resultados en las subregiones del departamento </p>
         </div>        
-        <p><h5>¿Qué te gustaría explorar?'</h5></p>
+        <p><h5>¿Qué te gustaría explorar?</h5></p>
         <ul class="list-group">
             {% for item in menu %}
             <a href="/response_four/{{loop.index}}/{{ source }}/{{ item }}" class="btn btn-outline-custom">{{ item }}</a>
