--- a/templates/questions_obj2.html
+++ b/templates/questions_obj2.html
@@ -24,7 +24,7 @@
             <h3>DataGovernor</h3>
             <p>Cátedra en Ciencia, Tecnología e Innovación + Creación para el desarrollo social y productivo de Caldas</p>
         </div>        
-        <p><h5>¿Qué te gustaría explorar?'</h5></p>
+        <p><h5>¿Qué te gustaría explorar?</h5></p>
         <ul class="list-group">
             {% for item in menu %}
             <a href="/response_two/{{loop.index}}/{{ source }}/{{ item }}" class="btn btn-outline-custom">{{ item }}</a>
